<resources>
    <string name="app_name">Storygram</string>
    <string name="tv_title_splash">Dicoding Story</string>
    <string name="tv_subtitle_splash">Tempat untuk segala keluh kesahmu</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="password_too_short">Password minimal 8 karakter</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="upload_story">Upload Story</string>
    <string name="name">Name</string>
    <string name="preview_image">Preview Image</string>
    <string name="add_story">Add Story</string>
    <string name="detail_photo">Detail Photo</string>
    <string name="signup">Daftar</string>
    <string name="namerequired">Masukan Nama Anda\n</string>
    <string name="invalidemail">Email tidak valid</string>
    <string name="emailalready">Email sudah ada</string>
    <string name="descriptionrequired">Masukan Deskripsi</string>
    <string name="filerequired">Berkas Diperlukan</string>
    <string name="uploadsuccess">Upload Berhasil!</string>
    <string name="emailrequired">Email Masih Kosong</string>
    <string name="passwordrequired">Password Diperlukan</string>
    <string name="registersuccess">Registrasi Berhasil</string>
    <string name="gagalmemuatstory">Gagal memuat Story</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_galery">Open Galery</string>
    <string name="add_a_description">Add a description</string>
    <string name="upload">Upload</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="create_account">Create Account</string>
    <string name="nama">Nama</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="description">description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">maps</string>
    <string name="retry">Retry</string>
    <string name="went_some_wrong">Went some wrong</string>
    <string name="share_my_location">Share my location ?  </string>
</resources>