<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.addstory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_add_story"
            android:layout_width="0dp"
            android:background="@drawable/coffee"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_open_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/open_camera"
            app:layout_constraintEnd_toStartOf="@+id/btn_open_gallery"
            app:layout_constraintStart_toStartOf="@id/iv_add_story"
            app:layout_constraintTop_toBottomOf="@id/iv_add_story" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            android:indeterminateTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iv_add_story"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_open_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/open_galery"
            app:layout_constraintEnd_toEndOf="@id/iv_add_story"
            app:layout_constraintStart_toEndOf="@id/btn_open_camera"
            app:layout_constraintTop_toBottomOf="@id/iv_add_story" />

        <EditText
            android:id="@+id/edt_deskripsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:padding="8dp"
            android:hint="@string/add_a_description"
            android:textStyle="italic"
            android:background="@drawable/border"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:minHeight="120dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_open_gallery"
            app:layout_constraintStart_toStartOf="@+id/btn_open_camera"
            app:layout_constraintTop_toBottomOf="@id/btn_open_camera" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/upload"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="@+id/edt_deskripsi"
            app:layout_constraintStart_toStartOf="@+id/edt_deskripsi"
            app:layout_constraintTop_toBottomOf="@+id/edt_deskripsi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>